# ovgu-canteen-gtk

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: master.yml  release.yml
data/: canteens.json  de.fin_ger.OvGUCanteen.css  de.fin_ger.OvGUCanteen.desktop  de.fin_ger.OvGUCanteen.glade  de.fin_ger.OvGUCanteen.metainfo.xml  gnome-ovgu-canteen.css  gnome-ovgu-canteen.desktop  gnome-ovgu-canteen.glade  io.github.fin_ger.OvGUCanteen.css  io.github.fin_ger.OvGUCanteen.desktop  io.github.fin_ger.OvGUCanteen.glade  io.github.fin_ger.OvGUCanteen.metainfo.xml
flatpak/: de.fin_ger.OvGUCanteen.json
po/: README.md  de.po  en.po  template.pot
schemas/: de.fin_ger.OvGUCanteen.gschema.xml  io.github.fin_ger.OvGUCanteen.gschema.xml
scripts/: flatpak-cargo-generator.py  flatpak.sh  translations.sh
src/: application.rs  components.rs  g_action_map.rs  main.rs  util.rs
src/components/: badge.rs  canteen.rs  day.rs  meal.rs  mod.rs  preferences.rs  window.rs
src/widgets/: app_menu.rs  main.rs  mod.rs
