[package]
name = "gnome-ovgu-canteen"
version = "0.1.0"
description = "View the OvGU Mensa menu in a gnome app"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/fin-ger/gnome-ovgu-canteen"
readme = "README.md"
keywords = ["mensa", "canteen", "ovgu"]
categories = ["gui"]
edition = "2018"

[dependencies]
gtk = { version = "0.8.1", features = ["v3_16"] }
gdk = { version = "0.12.1", features = ["v3_16"] }
gio = { version = "0.8.1", features = ["v2_44"] }
glib = { version = "0.9.2", features = ["v2_44"] }
ovgu-canteen = "0.3.0"
chrono = "0.4.10"
tokio = { version = "0.2.11", features = ["full"] }
chrono-tz = "0.5.1"
anyhow = "1.0.26"
cargo_author = "1.0.2"
