[package]
name = "gnome-ovgu-canteen"
version = "0.1.0"
description = "View the OvGU Mensa Menu in a Gnome App"
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes@spacesnek.rocks>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/fin-ger/gnome-ovgu-canteen"
readme = "README.md"
keywords = ["mensa", "canteen", "ovgu"]
categories = ["gui"]
edition = "2018"

[dependencies]
gtk = { version = "0.8.1", features = ["v3_22"] }
gdk = { version = "0.12.1", features = ["v3_22"] }
gio = { version = "0.8.1", features = ["v2_50"] }
glib = { version = "0.9.3", features = ["v2_50"] }
ovgu-canteen = "0.4.0"
chrono = "0.4.11"
tokio = { version = "0.2.20", features = ["full"] }
chrono-tz = "0.5.1"
anyhow = "1.0.28"
cargo_author = "1.0.2"
xdg = "2.2.0"
serde_json = { version = "1.0.52", optional = true }
itertools = "0.9.0"
futures = "0.3.4"
async-trait = "0.1.30"
send_wrapper = "0.4.0"
failure = "0.1.7"
serde_plain = "0.3.0"
gettext-rs = "0.4.4"
shellexpand = "2.0.0"

[features]
default = [] #["test-with-local-files"]
test-with-local-files = ["serde_json"]
